--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -53,7 +53,7 @@ a.navbar-item.is-active {
         background-size: cover;
 
         @media screen and (max-width: 768px) {
-            background-size: auto 100%;
+            background-size: cover;
             background-position: center center;
             background-attachment: scroll;
         }
